# task-orchestrator

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  system.mmd
backend/: __init__.py  config.py  llm_breakdown.py  llm_plan.py  llm_refine.py  main.py  schemas.py
backend/llm/: __init__.py  breakdown.py  plan.py  refine.py
backend/llm/prompts/: breakdown.json  plan.json  refine.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/breakdown/: page.tsx  systemAppearance.tsx
frontend/src/app/health/: page.tsx
frontend/src/components/: Json.tsx
frontend/src/lib/: api.ts  types.ts
